<resources>
    <string name="app_name">LusoD2</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="my_accaunt">My Accaunt</string>
    <string name="today_deals">Today Deals</string>
    <string name="all_deals">All Deals</string>
    <string name="new_reminder">New Reminder</string>
    <string name="dictionary">Dictionary</string>
    <string name="my_account">My Account </string>
</resources>