<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/Home"
            />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account"
            android:title="@string/my_account"
            />

        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/today_deals" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/all_deals"
            android:title="@string/all_deals" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/new_reminder"
            android:title="@string/new_reminder" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dictionary" />
    </group>
</menu>